data/all_generated_tests/raw_wast_tests/call_indirect_TypeMismatchinControlFlowInstructions_4604.wast
;; 3. **Test Description**:    - Execute a `call_indirect` with an invalid `typeidx` that does not reference a valid function type within the module's type section, expecting the system to trap due to an undefined type reference.    - **Constraint Being Checked**:      - That all type indices (`typeidx`) in the module are valid and properly defined in the type section.    - **Relation to Control Flow Instructions**:      - Validates that control flow mechanisms reference correct and pre-defined types, ensuring type safety.

(assert_invalid
  (module
    (type (func (param i32) (result i32)))
    (table 1 funcref)
    (func $invalid-typeidx
      (call_indirect (type 1) (i32.const 0) (i32.const 0))
    )
  )
  "unknown type"
)